# trab02sgbd

./: CMakeLists.txt  README.md  join_result.csv  main.cpp  resultado_uvapais.csv  resultado_vinho_uva.csv  resultado_vinhopais.csv  tmp_A_p4_r0.csv  tmp_sorted_T1.csv  tmp_sorted_T2.csv
include/: ExternalSorter.hpp  IoTracker.hpp  Page.hpp  SortMergeJoin.hpp  Table.hpp
src/: ExternalSorter.cpp  IoTracker.cpp  SortMergeJoin.cpp  Table.cpp
